adicionando section Inicio

--- a/codigo-fonte/index.css
+++ b/codigo-fonte/index.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 :root {
@@ -11,4 +14,5 @@
   --cinza-escuro: #292828;
   --branco: #fff;
   --hoverBranco: #dddcdc;
+  --cinza: #e9eaf4;
 }
