--- a/codigo-fonte/paginaIncial/style/paraQuem.css
+++ b/codigo-fonte/paginaIncial/style/paraQuem.css
@@ -7,5 +7,69 @@
   display: flex;
   align-items: center;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+
+#title-paraQuem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
+
+#title-paraQuem h3 {
+  font-size: 32px;
+  font-weight: 500;
+  color: var(--azul);
+}
+
+#title-paraQuem h3 span {
+  color: var(--laranja);
+}
+
+#div-cards-paraQuem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  height: 100%;
+}
+
+#div-cards-paraQuem > h4 {
+  font-size: 26px;
+  font-weight: 600;
+  color: var(--laranja);
+}
+
+#cards-paraQuem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8rem;
+  flex-wrap: wrap;
+}
+
+.card-paraQuem {
+  width: 299px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0 2rem;
+  text-align: center;
+  height: 300px;
+  border-radius: 8px;
+  box-shadow: 0px 6px 6px var(--cinza);
+}
+
+.card-paraQuem img {
+  width: 65px;
+}
+
+.card-paraQuem h5 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
