--- a/codigo-fonte/paginaIncial/style/paraQuem.css
+++ b/codigo-fonte/paginaIncial/style/paraQuem.css
@@ -14,7 +14,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: center;
+  height: 50%;
 }
 
 #title-paraQuem h3 {
@@ -32,7 +33,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 3rem;
   height: 100%;
 }
 
