ajuste de formatação

--- a/codigo-fonte/paginaIncial/style/paraQuem.css
+++ b/codigo-fonte/paginaIncial/style/paraQuem.css
@@ -73,4 +73,11 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  font-size: 26px;
+  line-height: 28px;
+  color: var(--azul);
+}
+
+.card-paraQuem p {
+  color: var(--cinza-escuro);
 }
