feat: Adicionar tela que mostra as listas do usuário

--- a/codigo-fonte/index.css
+++ b/codigo-fonte/index.css
@@ -9,9 +9,11 @@
 
 :root {
   --laranja: #f58013;
+  --laranja-claro: #fff0d4;
   --hoverLaranja: #e77408;
   --azul: #064176;
   --cinza-escuro: #292828;
+  --cinza-claro: #a5a5a5;
   --branco: #fff;
   --hoverBranco: #dddcdc;
   --cinza: #e9eaf4;
