--- a/codigo-fonte/sistema/style/style.css
+++ b/codigo-fonte/sistema/style/style.css
@@ -93,28 +93,20 @@ main {
 }
 
 .cInfoItems {
-  padding-top: 2rem;
+  padding: 2rem 0.5rem;
   display: flex;
   justify-content: space-around;
   overflow-y: auto;
 }
 
-.pChecklist,
-.pProduct,
-.pQuantity {
-  padding-bottom: 0.8rem;
-  color: var(--laranja);
-  font-size: 13px;
-  font-weight: 600;
-  text-transform: uppercase;
+.invisibleCheckbox {
+  display: none;
 }
 
-.vChecklist,
-.vProduct,
-.vQuantity {
-  color: var(--cinza-escuro);
-  font-size: 13px;
-  font-weight: 600;
+.cAssistentChecklist {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .vChecklist {
@@ -123,20 +115,11 @@ main {
   cursor: pointer;
 }
 
-.cChecklist,
-.cProduct,
-.cQuantity {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 .cBorder2 {
   max-width: 15rem;
   width: 100%;
   border-bottom: 1.9px solid var(--cinza-claro);
   margin: 0 auto;
-  /* padding-top: 6rem; */
   margin-bottom: 3.4rem;
 }
 
@@ -167,4 +150,44 @@ main {
   @media (max-width: 425px) {
     font-size: 13px;
   }
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+th,
+td {
+  text-align: left;
+  padding: 8px;
+  color: var(--cinza-escuro);
+  font-size: 13px;
+  font-weight: 600;
+  border: none;
+  background-color: transparent;
+  text-align: center;
+}
+th {
+  color: var(--laranja);
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.second-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.saveButton {
+  margin-bottom: 1rem;
+  background-color: var(--laranja);
+  color: var(--branco);
+  padding: 0.6rem 0;
+  width: 7rem;
+  border: none;
+  border-radius: 4px;
+  font-weight: 400;
+  cursor: pointer;
 }
