--- a/codigo-fonte/paginaIncial/style/crieSuaLista.css
+++ b/codigo-fonte/paginaIncial/style/crieSuaLista.css
@@ -72,6 +72,9 @@
   text-align: center;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--azul);
 }
 
 .header-facaLista::before {
