ajustando as linhas

--- a/codigo-fonte/paginaIncial/style/crieSuaLista.css
+++ b/codigo-fonte/paginaIncial/style/crieSuaLista.css
@@ -88,3 +88,7 @@
   border-color: var(--laranja-claro) transparent transparent transparent; /* Inverte o triângulo */
   z-index: 1;
 }
+
+.linha {
+  width: 60%;
+}
