feat: Funcionalidade de aumentar e diminuir a quantidade do item

--- a/codigo-fonte/index.css
+++ b/codigo-fonte/index.css
@@ -18,3 +18,13 @@
   --hoverBranco: #dddcdc;
   --cinza: #e9eaf4;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  width: 7px;
+  border-radius: 4px;
+  background-color: #f580139c;
+}
