--- a/codigo-fonte/paginaIncial/style/footer.css
+++ b/codigo-fonte/paginaIncial/style/footer.css
@@ -1,5 +1,5 @@
 footer {
-  display: flex;
+  display: flex; /*flex*/
   justify-content: space-between;
   background-color: var(--azul);
   padding: 30px 10px;
