--- a/codigo-fonte/paginaIncial/style/cabecalho.css
+++ b/codigo-fonte/paginaIncial/style/cabecalho.css
@@ -62,3 +62,104 @@
 #btnHeader-singUp:hover {
   background-color: var(--hoverLaranja);
 }
+
+#icon-header {
+  position: absolute;
+  right: 30px;
+  font-size: 30px;
+  color: var(--branco);
+  display: none;
+}
+
+#navbar-lateral {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  align-items: flex-start;
+  padding: 4rem 1rem;
+  gap: 1rem;
+  right: -200px;
+  height: 100vh;
+  width: 200px;
+  color: var(--branco);
+  background-color: var(--azul);
+  z-index: 0;
+  transition: all 0.5s ease;
+}
+
+#exit {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
+}
+
+.navbar-item-lateral {
+  color: var(--branco);
+  text-decoration: none;
+  z-index: 1;
+}
+
+.btn-header-lateral {
+  padding: 0.6rem 0;
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+#btnHeader-login-lateral {
+  background-color: var(--branco);
+  color: var(--laranja);
+  transition: all 0.4s ease;
+}
+
+#btnHeader-login-lateral:hover {
+  background-color: var(--hoverBranco);
+}
+
+#btnHeader-singUp-lateral {
+  background-color: var(--laranja);
+  color: var(--branco);
+}
+
+#btnHeader-singUp-lateral:hover {
+  background-color: var(--hoverLaranja);
+}
+
+@media (max-width: 927px) {
+  #navbar {
+    gap: 2rem;
+  }
+
+  .navbar-item {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 699px) {
+  .btn-header {
+    padding: 0.4rem 0;
+    width: 60px;
+  }
+}
+
+@media (max-width: 641px) {
+  #navbar {
+    display: none;
+  }
+
+  #btnHeader-div {
+    display: none;
+  }
+
+  #icon-header {
+    display: block;
+  }
+
+  #logo {
+    position: absolute;
+    left: 30px;
+  }
+}
