--- a/codigo-fonte/paginaIncial/style/quemSomos.css
+++ b/codigo-fonte/paginaIncial/style/quemSomos.css
@@ -1,5 +1,5 @@
 #quemSomos {
-  display: flex;
+  display: flex; /*flex*/
   flex-direction: column;
   background-color: var(--branco);
   padding-top: 84px;
