--- a/codigo-fonte/sistema/style/style.css
+++ b/codigo-fonte/sistema/style/style.css
@@ -177,8 +177,9 @@ th {
 
 .second-container {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
 }
 
 .saveButton {
@@ -191,11 +192,60 @@ th {
   border-radius: 4px;
   font-weight: 400;
   cursor: pointer;
+  margin-left: 1rem;
 }
 
-.button--quantity {
+.button--quantity,
+.button--item {
   border: none;
   background-color: transparent;
   cursor: pointer;
   padding: 0 7px;
+}
+
+.button--item {
+  margin-left: 1rem;
+}
+
+.tdQuantity {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button--delete--item {
+  cursor: pointer;
+  width: 18px;
+}
+
+.button--delete--item--invisible {
+  display: none;
+}
+
+.inputNewItem {
+  max-width: 6.2rem;
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  text-align: center;
+}
+
+.invisible {
+  display: none;
+}
+
+.button--save--item {
+  background-color: var(--laranja);
+  color: var(--branco);
+  padding: 0.3rem 0;
+  width: 4.6rem;
+  border: none;
+  border-radius: 4px;
+  font-weight: 400;
+  cursor: pointer;
+  margin-left: 1rem;
+}
+
+.containerAddNewItem {
+  padding-bottom: 1.6rem;
 }
