--- a/codigo-fonte/sistema/style/style.css
+++ b/codigo-fonte/sistema/style/style.css
@@ -44,6 +44,8 @@ main {
   padding: 1.4rem 0.5rem;
   margin-bottom: 1rem;
   box-shadow: 0px 2px 3px 0px rgb(156 154 156 / 8%);
+  display: flex;
+  justify-content: center;
 }
 
 .card-container {
@@ -90,6 +92,7 @@ main {
   font-size: 17px;
   font-weight: 600;
   text-transform: uppercase;
+  margin: 0 auto;
 }
 
 .cInfoItems {
@@ -262,4 +265,8 @@ th {
 
 input:focus-visible {
   outline: none;
+}
+
+.favoriteIcon {
+  width: 20px;
 }
