--- a/codigo-fonte/sistema/style/style.css
+++ b/codigo-fonte/sistema/style/style.css
@@ -198,6 +198,18 @@ th {
   margin-left: 1rem;
 }
 
+.useListButton {
+  background-color: var(--laranja);
+  color: var(--branco);
+  border-radius: 4px;
+  font-weight: 400;
+  cursor: pointer;
+  padding: 0.6rem 0;
+  width: 7rem;
+  border: none;
+  margin: 0.5rem 1rem 1rem 1rem;
+}
+
 .button--quantity,
 .button--item {
   border: none;
@@ -271,4 +283,9 @@ input:focus-visible {
   width: 20px;
   margin-right: 10px;
   cursor: pointer;
+}
+
+.second-c {
+  display: flex;
+  justify-content: center;
 }
