--- a/codigo-fonte/paginaIncial/style/crieSuaLista.css
+++ b/codigo-fonte/paginaIncial/style/crieSuaLista.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: var(--branco);
   padding-top: 84px;
-  height: calc(100vh);
+  min-height: calc(100vh);
   gap: 1.5rem;
   display: flex;
   align-items: center;
